# Ariadne

./: .env.example  .gitignore  404.html  README.md  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml
autoapi/: summary.html
autoapi/ariadne/: index.html
autoapi/ariadne/evaluation/: concept_search_evaluator.html  concept_selection_evaluator.html  index.html
autoapi/ariadne/llm_mapping/: concept_context_retriever.html  index.html  llm_mapper.html
autoapi/ariadne/term_cleanup/: index.html  term_cleaner.html
autoapi/ariadne/utils/: config.html  gen_ai_api.html  index.html  logger.html  utils.html
autoapi/ariadne/vector_search/: abstract_concept_searcher.html  hecate_concept_searcher.html  index.html  (+1 more)
autoapi/summary/: index.html
data/gold_standards/: exact_matching_gs.csv  hierarchy_gs.csv
data/notebook_results/: exact_matching_cleaned_terms.csv  exact_matching_final_evaluation.csv  exact_matching_llm_mapped_terms.csv  exact_matching_vector_search_evaluation.txt  exact_matching_vector_search_results.csv  exact_matching_verbatim_maps.csv  exact_matching_verbatim_matches.csv  nemotron_3_final_evaluation.csv
docs/: index.md  reference.md
docs/assets/: AriadneDiagram.pptx
docs/notebooks/: 01_evaluate_exact_mapping.ipynb
notebooks/: 01_evaluate_exact_mapping.html  01_evaluate_exact_matching.ipynb  evaluate_exact_matching.ipynb
reference/: index.html
sandbox/: documentation.bs  documentation.sh  evaluate_local_llm.py  evaluate_verbatim_coverage.py  test_utils.py
search/: search_index.json
stylesheets/: extra.css
(+42 files in other folders)
